--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "firebase-admin": "^12.2.0",
     "mongodb": "^6.7.0",
     "mongoose": "^8.4.3",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.4"
+    "multer": "^1.4.5-lts.1"
   }
 }
